--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="team">
             <div class="container">
                 <h2>Our Team</h2>
-                <div class="team-row">
+                <div class="team-members">
                     <div class="team-member">
                         <img src="images/dp.jpg" alt="Umair Inayat">
                         <h3>Umair Inayat</h3>
@@ -82,19 +82,12 @@
                 <p id="waitlistMessage">Thank you! You’ve successfully joined the waitlist.</p>
             </div>
         </section>
-        
     </main>
     <footer>
         <div class="container">
             <p>© 2024 Emotiease. All Rights Reserved.</p>
         </div>
     </footer>
-    <script>
-        // JavaScript for showing "Coming Soon" message
-        document.getElementById("notifyMe").addEventListener("click", function() {
-            const message = document.getElementById("comingSoonMessage");
-            message.style.display = "block"; // Show the message
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
