--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <h1>RADISIST</h1>
                 </div>
-                
+
                 <div class="nav-links">
                     <a href="#features">Features</a>
                     <a href="#about">About</a>
@@ -243,10 +243,11 @@
                     <div class="demo-visual">
                         <div class="ct-scan-demo">
                             <div class="scan-image">
+                                <img src="images/images.jpg" alt="CT Scan Demo">
                                 <div class="scan-overlay"></div>
                                 <div class="detection-points">
-                                    <div class="detection-point point-1"></div>
-                                    <div class="detection-point point-2"></div>
+                                    <div class="detection-point point-1" aria-label="Detection point 1"></div>
+                                    <div class="detection-point point-2" aria-label="Detection point 2"></div>
                                 </div>
                             </div>
                             <div class="analysis-panel">
@@ -282,7 +283,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>© 2024 RADISIST. All Rights Reserved.</p>
+            <p>© 2025 RADISIST. All Rights Reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
